--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
